[package]
name = "rusty-kong"
version = "0.1.0"
authors = ["zwenderk <zwenderk@hotmail.com>"]

#[[bin]]
#name="rusty-kong"
#path="main/src/game/main.rs"

#[[bin]]
#name="ripper"
#path="main/src/ripper/main.rs"

[dependencies]
lazy_static = "1.0"
log = "0.4.6"
simple_logger = "1.0.1"

[dependencies.sdl2]
    version = "0.31"
    default-features = false
    features = ["ttf","image","gfx","mixer"]